# vdbms-playground

./: .gitignore  README.md
custom_vector_store/: CMakeLists.txt  doc_store.hpp  hnsw_sqlite_store_manager.cpp  hnsw_vec_store.cpp  run_test_hnswlib_sqlite_vec_db.sh  sqlite_doc_store.cpp  store_manager.hpp  test_hnswlib_sqlite_vec_db.cpp  vec_store.hpp
custom_vector_store/test/: data_gen.py
custom_vector_store/test/data/: docs.txt  queries.txt
milvus-lite/: ml_test.py
qdrant/: qdrant_test.py
